--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Playground repository list</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     <div class="repo--js" id="repositories">
     </div>
   </main>
-  <script src="./script.js"></script>
+  <script src="scripts.js"></script>
 </body>
 
 </html>
