--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <article>
       <h1>My Github repositories with coding examples & playgrounds</h1>
       Here are my repositories on Github with code examples. Browse through them and see what you can use (or learn from) or what you can utilize in your next project! I made these examples for the coding classes that I teach, but figured they might come in handy as a resource overview for others.
+      <a href="https://github.com/davidvandenbor/playgrounds" target="_blank">Visit me on Github</a>
     </article>
     <section class="search-function"> Search filter <input type="text" id="myInput" onkeyup="zoekfilter()" placeholder="Search using keywords.." title="Type in a name"></section>
   </section>
