--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="https://avatars3.githubusercontent.com/u/5694412?s=460&u=1d4e81b7acb678c6819ce54cc3cc2a0f76c9d13c&v=4" alt="">
     <article>
       <h1>My Github repositories with coding examples & playgrounds</h1>
-      Here are my repositories on Github with code examples. Browse through them and see what you can use them for (or learn from) or what you can utilize in your next project! I made these examples for the coding classes that I teach, but figured they might come in handy as a resource overview for others.
+      Here are my repositories on Github with code examples. Browse through them and see what you can use them for (or what you could learn from them) Or maybe try using them in your next project! I made these examples for the coding classes that I teach, but figured they might come in handy as a resource collection for others.
       <a href="https://github.com/davidvandenbor/playgrounds" target="_blank">Visit me on Github</a>
     </article>
     <section class="search-function"> Search filter <input type="text" id="myInput" onkeyup="zoekfilter()" placeholder="Search using keywords.." title="Type in a name"></section>
