--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       Here are my repositories on Github with code examples. Browse through them and see what you can use them for (or what you could learn from them) Or maybe try using them in your next project! I made these examples for the coding classes that I teach, but figured they might come in handy as a resource collection for others.
       <a href="https://github.com/davidvandenbor/playgrounds" target="_blank">Visit me on Github</a>
     </article>
-    <section class="search-function"> Search filter <input type="text" id="myInput" onkeyup="zoekfilter()" placeholder="Search using keywords.." title="Type in a name"></section>
-    <section class="search-function"> Search filter <input type="text" id="myInput" onkeyup="zoekfilterCourse()" placeholder="Zoek op afkorting CMD vak.." title="Type in a name"></section>  </section>
+    <section class="search-function"> Search filter <input type="text" id="myInput" onkeyup="zoekfilter()" placeholder="Zoek op trefwoord.." title="Trefwoord typen"></section>
+    <section class="search-function"> Search filter <input type="text" id="myInput" onkeyup="zoekfilterCourse()" placeholder="Zoek op afkorting CMD vak.." title="Afkorting course"></section>  </section>
 
   <main>
     <div class="repo--js" id="repositories">
