--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="https://github.com/davidvandenbor/playgrounds" target="_blank">Visit me on Github</a>
     </article>
     <section class="search-function"> Search filter <input type="text" id="myInput" onkeyup="zoekfilter()" placeholder="Zoek op trefwoord.." title="Trefwoord typen"></section>
-    <section class="search-function"> Search filter <input type="text" id="myInput" onkeyup="zoekfilterCourse()" placeholder="Zoek op afkorting CMD vak.." title="Afkorting course"></section>  </section>
+    <section class="search-function"> Search filter <input type="text" id="myInputCourse" onkeyup="zoekfilterCourse()" placeholder="Zoek op afkorting CMD vak.." title="Afkorting course"></section>  </section>
 
   <main>
     <div class="repo--js" id="repositories">
